--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.mattermost.desktop-react
-productName: Mattermost
+productName: Mattermost React
 copyright: Copyright © 2026
 
 directories:
